# wechat_scraping

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
01_code/: cookie.txt  key.txt  manual_scrape_text.py  mitmexe.py  mitmfedora.py  mitmproxy.py  mitmtest.py  params.json  retrieve_params.py  test.py  utils.py  wechat_scrape_links.py  wechat_scrape_text.py  wechatcollect.py
01_code/data/: wechat_metadata.xlsx
02_data/: url.txt  北美留学生日报_text.csv
02_data/02_links/: 环球时报.csv
02_data/03_text/: 北美留学生日报_text.csv
02_data/New/: INSIGHT世界.csv
code/: key.txt  manual_scrape_text.py  mitmproxy.py  utils.py  wechat_scrape_links.py  wechat_scrape_text.py  wechat_scraping_links.py  wechat_scraping_text.py
datasets/New/: 北美留学生日报.csv
datasets/links/: INSIGHT视界.xlsx  北美留学生日报.xlsx  北美留学生日报_1.xlsx
datasets/texts/: INSIGHT视界_text.csv  北美留学生日报_text.csv
setup/: setup_virtualbox_vm.sh
src/wechat_scraping/: Untitled.ipynb  __init__.py  美国华人杂谈.csv
src/wechat_scraping/data/: wechat_metadata.xlsx
src/wechat_scraping/host/: log.json  mac_scraper.py  offset.json  utils.py  wechat_scraper.py
src/wechat_scraping/tests/: tor_tester.py  (+2 more)
tests/: mitm_monitor.py
wechat_scraping/: Untitled.ipynb  __init__.py  log.json  mitm_monitor.py  mitmproxy.py  offset.json  params.json  pyautogui_test.py  retrieve_params.py  screenshot.py  test_tor.py  utils.py  wechat_version.py  wechatcollect.py  环球时报.csv
wechat_scraping/data/: .csv  环球时报.csv
wechat_scraping/tests/: pyautogui_test.py  screen_capture.py  wechat_version.py
wechat_scraping/virtualbox/: mitm_proxy_manager.py
(+3 files in other folders)
